[gd_scene load_steps=5 format=3 uid="uid://dqctfu3cn4vwa"]

[ext_resource type="Script" path="res://Buffs.gd" id="1_ve5t4"]
[ext_resource type="FontFile" uid="uid://brmm5lbpeonae" path="res://Fonts/MONACO.TTF" id="2_062nq"]
[ext_resource type="Texture2D" uid="uid://cmqt107i7kj7e" path="res://Images/coinspritesheet (1).png" id="3_5y3yi"]
[ext_resource type="Script" path="res://Close.gd" id="3_m28ib"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ve5t4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -498.0
offset_top = -241.5
offset_right = 498.0
offset_bottom = 241.5
grow_horizontal = 2
grow_vertical = 2

[node name="SecondItem" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 422.0
offset_top = 118.5
offset_right = 1022.0
offset_bottom = 718.5
scale = Vector2(0.310183, 0.310183)
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel/SecondItem"]
layout_mode = 0
offset_left = 3.0
offset_top = 642.0
offset_right = 606.0
offset_bottom = 939.0
theme_override_fonts/normal_font = ExtResource("2_062nq")
theme_override_font_sizes/normal_font_size = 60
text = "5000"

[node name="ThirdItem" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 709.0
offset_top = 114.5
offset_right = 1309.0
offset_bottom = 714.5
scale = Vector2(0.310183, 0.310183)
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel/ThirdItem"]
layout_mode = 0
offset_left = 3.0
offset_top = 645.0
offset_right = 606.0
offset_bottom = 964.0
theme_override_fonts/normal_font = ExtResource("2_062nq")
theme_override_font_sizes/normal_font_size = 60
text = "5000"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 85.0
offset_top = 16.5
offset_right = 322.0
offset_bottom = 199.5
theme_override_fonts/normal_font = ExtResource("2_062nq")
theme_override_font_sizes/normal_font_size = 50
text = "5"

[node name="FirstItem" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 101.0
offset_top = 117.5
offset_right = 701.0
offset_bottom = 717.5
scale = Vector2(0.310183, 0.310183)
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel/FirstItem"]
layout_mode = 0
offset_left = 3.0
offset_top = 645.0
offset_right = 606.0
offset_bottom = 945.0
theme_override_fonts/normal_font = ExtResource("2_062nq")
theme_override_font_sizes/normal_font_size = 60
text = "5000"

[node name="Close" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 816.0
offset_top = 22.0
offset_right = 977.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("2_062nq")
text = "CLOSE"
script = ExtResource("3_m28ib")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 13.0
offset_right = 160.0
offset_bottom = 152.0
texture = ExtResource("3_5y3yi")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="CanvasLayer/Panel/SecondItem" to="." method="_on_second_item_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/SecondItem" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/SecondItem" to="CanvasLayer" method="_on_second_item_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/SecondItem" to="CanvasLayer" method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/SecondItem" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ThirdItem" to="." method="_on_third_item_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ThirdItem" to="CanvasLayer" method="_on_third_item_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ThirdItem" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/FirstItem" to="." method="_on_first_item_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/FirstItem" to="CanvasLayer" method="_on_first_item_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/FirstItem" to="CanvasLayer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Close" to="CanvasLayer/Panel/Close" method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
